--- a/mobile/src/main/res/values/strings.xml
+++ b/mobile/src/main/res/values/strings.xml
@@ -17,6 +17,9 @@
     <string name="title_activity_sensors">Sensors</string>
     <string name="title_activity_settings">Settings</string>
 
+    <string name="select_sensor">Select sensor</string>
+    <string name="unsupported_sensor">Unsupported sensor</string>
+
     <!-- Strings related to Settings -->
     <!-- Example General settings -->
     <string name="pref_header_general">General</string>
@@ -26,7 +29,7 @@
         based on your message history
     </string>
 
-    <string name="pref_title_display_name">Display name</string>
+    <string name="pref_title_display_name">Display type</string>
     <string name="pref_default_display_name">John Smith</string>
 
     <string name="pref_title_add_friends_to_messages">Add friends to messages</string>
