--- a/common/src/main/res/values/strings.xml
+++ b/common/src/main/res/values/strings.xml
@@ -43,5 +43,5 @@
     <string name="sensor_type_orientation">Orientation (Deprecated)</string>
     <string name="sensor_type_temperature">Temperature (Deprecated)</string>
     <string name="sensor_type_unknown">Unknown</string>
-    <string name="sensor_significant_motion_detected">Significant motion detected.</string>
+    <string name="sensor_significant_motion_detected">Significant motion detected</string>
 </resources>
