- Wear App now supports Round and Square screens with the same shared layout - More refactoring.

--- a/wear/src/main/res/values/strings.xml
+++ b/wear/src/main/res/values/strings.xml
@@ -12,7 +12,5 @@
 
 <resources>
     <string name="app_name">YanuX Scavenger</string>
-    <string name="title_activity_main_wear">MainWearActivity</string>
-    <string name="hello_round">Hello Round World!</string>
-    <string name="hello_square">Hello Square World!</string>
+    <string name="title_activity_main_wear">YanuX Scavenger</string>
 </resources>
