- APKs generated for easier distribution - Some clean up here and there - Removed some unused code - More refactoring

--- a/mobile/src/main/res/values/strings.xml
+++ b/mobile/src/main/res/values/strings.xml
@@ -27,6 +27,8 @@
     <string name="sensor_values">Values</string>
     <string name="timestamp">Timestamp</string>
 
+    <string name="wifi_access_points">Access Points</string>
+
     <!-- Strings related to Settings -->
     <!-- Example General settings -->
     <string name="pref_header_general">General</string>
