--- a/mobile/src/main/res/values/strings.xml
+++ b/mobile/src/main/res/values/strings.xml
@@ -27,7 +27,11 @@
     <string name="sensor_values">Values</string>
     <string name="timestamp">Timestamp</string>
 
+    <string name="wifi_connection_info">Connection Info</string>
+    <string name="wifi_dhcp_info">DHCP Info</string>
     <string name="wifi_access_points">Access Points</string>
+    <string name="wifi_scan_always_available_enabled">Thank you for allowing Wi-Fi scanning to be always available.</string>
+    <string name="wifi_scan_always_available_not_enabled">You haven\'t enabled Wi-Fi scanning to be always enable. The application will have to forcefully enable Wi-Fi.</string>
 
     <!-- Strings related to Settings -->
     <!-- Example General settings -->
