--- a/mobile/src/main/res/values/strings.xml
+++ b/mobile/src/main/res/values/strings.xml
@@ -16,11 +16,13 @@
     <string name="action_sensors">Sensors</string>
     <string name="action_wifi">Wi-Fi</string>
     <string name="action_bluetooth_classic">Bluetooth Classic</string>
+    <string name="action_bluetooth_le">Bluetooth Low Energy</string>
     <string name="action_settings">Settings</string>
 
     <string name="title_activity_sensors">Sensors</string>
     <string name="title_activity_wifi">Wi-Fi</string>
     <string name="title_activity_bluetooth_classic">Bluetooth Classic</string>
+    <string name="title_activity_bluetooth_le">Bluetooth Low Energy</string>
     <string name="title_activity_settings">Settings</string>
 
     <string name="select_sensor">Select sensor</string>
@@ -46,6 +48,10 @@
     <string name="bluetooth_discovery_elapsed_time">Elapsed time</string>
     <string name="bluetooth_devices">Bluetooth Devices</string>
 
+    <string name="bluetooth_le_name">Name</string>
+    <string name="bluetooth_le_address">Address</string>
+    <string name="bluetooth_le_discovery_elapsed_time">Elapsed time</string>
+    <string name="bluetooth_le_devices">Bluetooth Low Energy Devices</string>
 
     <!-- Strings related to Settings -->
     <!-- Example General settings -->
