--- a/mobile/src/main/res/values/strings.xml
+++ b/mobile/src/main/res/values/strings.xml
@@ -13,17 +13,20 @@
 <resources>
     <string name="app_name">YanuX Scavenger</string>
 
-    <string name="action_sensors">Sensors</string>
-    <string name="action_wifi">Wi-Fi</string>
-    <string name="action_bluetooth_classic">Bluetooth Classic</string>
-    <string name="action_bluetooth_le">Bluetooth Low Energy</string>
-    <string name="action_settings">Settings</string>
-
     <string name="title_activity_sensors">Sensors</string>
     <string name="title_activity_wifi">Wi-Fi</string>
     <string name="title_activity_bluetooth_classic">Bluetooth Classic</string>
     <string name="title_activity_bluetooth_le">Bluetooth Low Energy</string>
+    <string name="title_activity_beacon">Beacons</string>
     <string name="title_activity_settings">Settings</string>
+
+    <string name="action_sensors">Sensors</string>
+    <string name="action_wifi">Wi-Fi</string>
+    <string name="action_bluetooth_classic">Bluetooth Classic</string>
+    <string name="action_bluetooth_le">Bluetooth Low Energy</string>
+    <string name="action_beacon">Beacons</string>
+    <string name="action_settings">Settings</string>
+
 
     <string name="select_sensor">Select sensor</string>
     <string name="unsupported_sensor">Unsupported sensor</string>
@@ -52,6 +55,10 @@
     <string name="bluetooth_le_address">Address</string>
     <string name="bluetooth_le_discovery_elapsed_time">Elapsed time</string>
     <string name="bluetooth_le_devices">Bluetooth Low Energy Devices</string>
+
+    <string name="beacon_list">Beacons</string>
+    <string name="beacon_ranging_elapsed_time">Elapsed time</string>
+
 
     <!-- Strings related to Settings -->
     <!-- Example General settings -->
