--- a/mobile/src/main/res/values/strings.xml
+++ b/mobile/src/main/res/values/strings.xml
@@ -27,7 +27,6 @@
     <string name="action_beacon">Beacons</string>
     <string name="action_settings">Settings</string>
 
-
     <string name="select_sensor">Select sensor</string>
     <string name="unsupported_sensor">Unsupported sensor</string>
     <string name="sensor_accuracy">Accuracy</string>
@@ -39,6 +38,11 @@
     <string name="wifi_access_points">Access Points</string>
     <string name="wifi_scan_always_available_enabled">Thank you for allowing Wi-Fi scanning to be always available.</string>
     <string name="wifi_scan_always_available_not_enabled">You haven\'t enabled Wi-Fi scanning to be always enable. The application will have to forcefully enable Wi-Fi.</string>
+
+    <string name="log_button">Log</string>
+    <string name="log_name">Log Name</string>
+    <string name="log_samples">Number of Samples</string>
+    <string name="log_start">Start Logging</string>
 
     <string name="bluetooth_enabled">Thank you for enabling Bluetooth.</string>
     <string name="bluetooth_not_enabled">You haven\'t enabled Bluetooth. The application will not be able to use Bluetooth to improve your experience.</string>
@@ -116,4 +120,7 @@
     <string name="pref_ringtone_silent">Silent</string>
 
     <string name="pref_title_vibrate">Vibrate</string>
+
+    <!-- TODO: Remove or change this placeholder text -->
+    <string name="hello_blank_fragment">Hello blank fragment</string>
 </resources>
