- Many improvements, bugfixes and some refactoring

--- a/common/src/main/res/values/strings.xml
+++ b/common/src/main/res/values/strings.xml
@@ -57,4 +57,5 @@
     <string name="sensor_type_temperature">Temperature (Deprecated)</string>
     <string name="sensor_type_unknown">Unknown</string>
     <string name="sensor_significant_motion_detected">Significant motion detected</string>
+    <string name="sensor_type_rotation_wrapper">Rotation Wrapper</string>
 </resources>
