--- a/mobile/src/main/res/values/strings.xml
+++ b/mobile/src/main/res/values/strings.xml
@@ -18,6 +18,7 @@
     <string name="title_activity_bluetooth_classic">Bluetooth Classic</string>
     <string name="title_activity_bluetooth_le">Bluetooth Low Energy</string>
     <string name="title_activity_beacon">Beacons</string>
+    <string name="title_activity_audio">Audio</string>
     <string name="title_activity_settings">Settings</string>
 
     <string name="action_sensors">Sensors</string>
@@ -25,6 +26,7 @@
     <string name="action_bluetooth_classic">Bluetooth Classic</string>
     <string name="action_bluetooth_le">Bluetooth Low Energy</string>
     <string name="action_beacon">Beacons</string>
+    <string name="action_audio">Audio</string>
     <string name="action_settings">Settings</string>
 
     <string name="select_sensor">Select sensor</string>
@@ -65,6 +67,9 @@
 
     <string name="beacon_list">Beacons</string>
     <string name="beacon_ranging_elapsed_time">Elapsed time</string>
+
+    <string name="audio_tone">Tone</string>
+    <string name="audio_tone_frequency">Frequency</string>
 
 
     <!-- Strings related to Settings -->
