--- a/mobile/src/main/res/values/strings.xml
+++ b/mobile/src/main/res/values/strings.xml
@@ -73,6 +73,8 @@
     <string name="audio_tone_frequency_units">Hz</string>
     <string name="audio_tone_duration">Duration</string>
     <string name="audio_tone_interval">Interval</string>
+    <string name="audio_tone_play">Play</string>
+    <string name="audio_tone_record">Record</string>
 
     <!-- Strings related to Settings -->
     <!-- Example General settings -->
