--- a/mobile/src/main/res/values/strings.xml
+++ b/mobile/src/main/res/values/strings.xml
@@ -19,7 +19,10 @@
     <string name="title_activity_bluetooth_le">Bluetooth Low Energy</string>
     <string name="title_activity_beacon">Beacons</string>
     <string name="title_activity_audio">Audio</string>
+    <string name="title_activity_nearby">Nearby</string>
     <string name="title_activity_settings">Settings</string>
+
+    <string name="no_ui_activity">This Activity has no UI. All the magic happens in the Logcat.</string>
 
     <string name="action_sensors">Sensors</string>
     <string name="action_wifi">Wi-Fi</string>
@@ -27,6 +30,7 @@
     <string name="action_bluetooth_le">Bluetooth Low Energy</string>
     <string name="action_beacon">Beacons</string>
     <string name="action_audio">Audio</string>
+    <string name="action_nearby">Nearby</string>
     <string name="action_settings">Settings</string>
 
     <string name="select_sensor">Select sensor</string>
@@ -83,19 +87,15 @@
     <string name="audio_tone_record_filename">Recording Filename</string>
     <string name="audio_tone_record_filename_default">audio.wav</string>
 
-
     <!-- Strings related to Settings -->
     <!-- Example General settings -->
     <string name="pref_header_general">General</string>
-
     <string name="pref_title_social_recommendations">Enable social recommendations</string>
     <string name="pref_description_social_recommendations">Recommendations for people to contact
         based on your message history
     </string>
-
     <string name="pref_title_display_name">Display type</string>
     <string name="pref_default_display_name">John Smith</string>
-
     <string name="pref_title_add_friends_to_messages">Add friends to messages</string>
     <string-array name="pref_example_list_titles">
         <item>Always</item>
@@ -107,10 +107,8 @@
         <item>0</item>
         <item>-1</item>
     </string-array>
-
     <!-- Example settings for Data & Sync -->
     <string name="pref_header_data_sync">Data &amp; sync</string>
-
     <string name="pref_title_sync_frequency">Sync frequency</string>
     <string-array name="pref_sync_frequency_titles">
         <item>15 minutes</item>
@@ -128,19 +126,11 @@
         <item>360</item>
         <item>-1</item>
     </string-array>
-
     <string name="pref_title_system_sync_settings">System sync settings</string>
-
     <!-- Example settings for Notifications -->
     <string name="pref_header_notifications">Notifications</string>
-
     <string name="pref_title_new_message_notifications">New message notifications</string>
-
     <string name="pref_title_ringtone">Ringtone</string>
     <string name="pref_ringtone_silent">Silent</string>
-
     <string name="pref_title_vibrate">Vibrate</string>
-
-    <!-- TODO: Remove or change this placeholder text -->
-    <string name="hello_blank_fragment">Hello blank fragment</string>
 </resources>
