--- a/mobile/src/main/res/values/strings.xml
+++ b/mobile/src/main/res/values/strings.xml
@@ -22,7 +22,7 @@
     <string name="title_activity_nearby_messages">Nearby Messages</string>
     <string name="title_activity_sensors">Sensors</string>
     <string name="title_activity_wifi">Wi-Fi</string>
-    <string name="title_activity_settings">Settings</string>
+    <string name="title_activity_preferences">Preferences</string>
 
     <string name="action_audio">Audio</string>
     <string name="action_beacons">Beacons</string>
@@ -32,7 +32,7 @@
     <string name="action_nearby_messages">Nearby Messages</string>
     <string name="action_sensors">Sensors</string>
     <string name="action_wifi">Wi-Fi</string>
-    <string name="action_settings">Settings</string>
+    <string name="action_preferences">Preferences</string>
 
     <string name="no_ui_activity">This Activity has no UI. All the magic happens in the Logcat.</string>
     <string name="on">On</string>
@@ -97,4 +97,13 @@
     <string name="log_samples">Number of Samples</string>
     <string name="log_start">Start Logging</string>
     <string name="log_sample_counter">Samples</string>
+
+    <string name="preferences_category_general">General</string>
+    <string name="preferences_category_background_service">Background service</string>
+    <string name="preferences_category_help">Help</string>
+    <string name="preferences_title_display_name">Display name</string>
+    <string name="preferences_title_feedback">Feedback</string>
+    <string name="preferences_title_allow_background_service">Allow background service</string>
+    <string name="preferences_summary_feedback">Report technical issues or suggest new features</string>
+
 </resources>
