--- a/mobile/src/main/res/values/strings.xml
+++ b/mobile/src/main/res/values/strings.xml
@@ -98,11 +98,43 @@
     <string name="log_start">Start Logging</string>
     <string name="log_sample_counter">Samples</string>
 
-    <string name="preferences_category_general">General</string>
-    <string name="preferences_category_background_service">Background service</string>
-    <string name="preferences_category_help">Help</string>
-    <string name="preferences_title_display_name">Display name</string>
-    <string name="preferences_title_feedback">Feedback</string>
-    <string name="preferences_title_allow_background_service">Allow background service</string>
-    <string name="preferences_summary_feedback">Report technical issues or suggest new features</string>
+    <!-- Preferences -->
+    <string name="preferences_category_persistent_service">Persistent service</string>
+    <string name="preferences_title_allow_persistent_service">Allow persistent service</string>
+
+    <string name="preferences_category_beacon_scanning">Beacon scanning</string>
+    <string name="preferences_title_beacon_scan">Beacon Scan</string>
+    <string name="preferences_title_beacon_matcher_parameters_uuid">Beacon Matcher UUID</string>
+    <string name="preferences_default_beacon_matcher_parameters_uuid">113069EC-6E64-4BD3-6810-DE01B36E8A3E</string>
+
+    <string name="preferences_category_beacon_advertising">Beacon advertising</string>
+    <string name="preferences_title_beacon_advertise">Beacon Advertise</string>
+    <string name="preferences_title_beacon_advertiser_parameters_uuid">Beacon Advertiser UUID</string>
+    <string name="preferences_default_beacon_advertiser_parameters_uuid">113069EC-6E64-4BD3-6810-DE01B36E8A3E</string>
+    <string name="preferences_title_beacon_advertiser_parameters_major">Beacon Advertiser Major</string>
+    <string name="preferences_title_beacon_advertiser_parameters_minor">Beacon Advertiser Minor</string>
+
+    <string name="preferences_category_device">Device</string>
+    <string name="preferences_title_device_uuid">Device UUID</string>
+    <string name="preferences_title_device_capabilities_view">View</string>
+    <string name="preferences_title_device_capabilities_control">control</string>
+
+    <string name="preferences_category_http_server">HTTP Server</string>
+    <string name="preferences_title_http_server_port">HTTP Server Port</string>
+
+    <string name="preferences_category_authentication">Authentication</string>
+    <string name="preferences_title_oauth2_authorization_server_url">OAuth 2.0 Authorization Server URL</string>
+    <string name="preferences_default_oauth2_authorization_server_url">http://localhost:3002/</string>
+    <string name="preferences_title_client_id">Client ID</string>
+    <string name="preferences_default_client_id">yanux-ips-desktop-client</string>
+    <string name="preferences_title_client_secret">Client Secret</string>
+    <string name="preferences_default_client_secret">topsecret_client_secret</string>
+    <string name="preferences_title_access_token">Access Token</string>
+    <string name="preferences_title_refresh_token">Refresh Token</string>
+    <string name="preferences_title_redirect_uri">Redirect URI</string>
+    <string name="preferences_default_redirect_uri">http://localhost:3003/</string>
+
+    <string name="preferences_category_indoor_positioning">Indoor Positioning</string>
+    <string name="preferences_title_ips_server_url">IPS Server URL</string>
+    <string name="preferences_default_ips_server_url">http://localhost:3002/</string>
 </resources>
