- Many improvements, code reorganization and refactoring, bug fixes, et al.

--- a/common/src/main/res/values/strings.xml
+++ b/common/src/main/res/values/strings.xml
@@ -67,6 +67,6 @@
     <string name="sensor_significant_motion_detected">Significant motion detected</string>
     <string name="sensor_type_rotation_wrapper">Rotation Wrapper</string>
 
-    <!-- Persistent Service -->
+    <!-- Persistent GenericService -->
     <string name="persistent_service_authentication_warning">Please authenticate with YanuX Auth to continue.</string>
 </resources>
