--- a/mobile/src/main/res/values/strings.xml
+++ b/mobile/src/main/res/values/strings.xml
@@ -111,6 +111,10 @@
     <string name="preferences_title_beacon_scan">Beacon Scan</string>
     <string name="preferences_title_beacon_matcher_parameters_uuid">Beacon Matcher UUID</string>
     <string name="preferences_default_beacon_matcher_parameters_uuid">113069EC-6E64-4BD3-6810-DE01B36E8A3E</string>
+    <string name="preferences_title_beacon_matcher_parameters_major">Beacon Matcher Major</string>
+    <string name="preferences_default_beacon_matcher_parameters_major">-1</string>
+    <string name="preferences_title_beacon_matcher_parameters_minor">Beacon Matcher Minor</string>
+    <string name="preferences_default_beacon_matcher_parameters_minor">-1</string>
 
     <string name="preferences_category_beacon_advertising">Beacon advertising</string>
     <string name="preferences_title_beacon_advertise">Beacon Advertise</string>
