--- a/mobile/src/main/res/values/strings.xml
+++ b/mobile/src/main/res/values/strings.xml
@@ -94,6 +94,9 @@
     <string name="wifi_scan_always_available_enabled">Thank you for allowing Wi-Fi scanning to be always available.</string>
     <string name="wifi_scan_always_available_not_enabled">You haven\'t enabled Wi-Fi scanning to be always enable. The application will have to forcefully enable Wi-Fi.</string>
     <string name="wifi_elapsed_time">Elapsed Time</string>
+    <string name="wifi_supports_rtt">This device supports Wi-Fi RTT</string>
+    <string name="wifi_not_supports_rtt">"This device does not support Wi-Fi RTT"</string>
+
 
     <string name="log">Log</string>
     <string name="log_settings">Log Settings</string>
