--- a/mobile/src/main/res/values/strings.xml
+++ b/mobile/src/main/res/values/strings.xml
@@ -112,6 +112,7 @@
 
     <string name="preferences_category_beacon_scanning">Beacon scanning</string>
     <string name="preferences_title_beacon_scan">Beacon Scan</string>
+    <string name="preferences_title_beacon_scan_realtime_updates">Realtime Updates</string>
     <string name="preferences_title_beacon_matcher_parameters_uuid">Beacon Matcher UUID</string>
     <string name="preferences_default_beacon_matcher_parameters_uuid">113069EC-6E64-4BD3-6810-DE01B36E8A3E</string>
     <string name="preferences_title_beacon_matcher_parameters_major">Beacon Matcher Major</string>
