- Added if guards to ensure that the application doesn't crash if a device doesn't have Bluetooth (e.g., on an Android emulator).

--- a/common/src/main/res/values/strings.xml
+++ b/common/src/main/res/values/strings.xml
@@ -74,5 +74,6 @@
     <string name="sensor_type_rotation_wrapper">Rotation Wrapper</string>
 
     <!-- Beacon -->
+    <string name="beacon_bluetooth_le_not_available">Bluetooth Low Energy Not Available</string>
     <string name="beacon_advertiser_not_supported">Beacon advertisement is not supported</string>
 </resources>
