--- a/mobile/src/main/res/values/strings.xml
+++ b/mobile/src/main/res/values/strings.xml
@@ -1,5 +1,5 @@
 <!--
-  ~ Copyright (c) 2019 Pedro Albuquerque Santos.
+  ~ Copyright (c) 2020 Pedro Albuquerque Santos.
   ~
   ~ This file is part of YanuX Scavenger.
   ~
@@ -114,6 +114,11 @@
     <string name="preferences_title_allow_persistent_service">Allow persistent service</string>
     <string name="preferences_title_allow_zeroconf">Allow zero-configuration networking</string>
 
+    <string name="preferences_category_device">Device</string>
+    <string name="preferences_title_device_name">Device Name</string>
+    <string name="preferences_default_device_name">Android</string>
+    <string name="preferences_title_device_uuid">Device UUID</string>
+
     <string name="preferences_category_beacon_scanning">Beacon scanning</string>
     <string name="preferences_title_beacon_scan">Beacon Scan</string>
     <string name="preferences_title_beacon_scan_realtime_updates">Realtime Updates</string>
@@ -132,11 +137,6 @@
     <string name="preferences_title_beacon_advertiser_parameters_minor">Beacon Advertiser Minor</string>
     <string name="preferences_title_beacons_refresh_interval">Beacons Refresh Interval</string>
     <string name="preferences_title_beacons_inactivity_timer">Beacons Inactivity Timer</string>
-
-    <string name="preferences_category_device">Device</string>
-    <string name="preferences_title_device_uuid">Device UUID</string>
-    <string name="preferences_title_device_capabilities_view">View</string>
-    <string name="preferences_title_device_capabilities_control">Control</string>
 
     <string name="preferences_category_http_server">HTTP Server</string>
     <string name="preferences_title_http_server_port">HTTP Server Port</string>
