- Switched from PEM based JWT Public Key verification to JWK based verification. - Moved Capabilities extraction from MainActivity to the PersistentService - Update Capabilities when device orientation changes - Other tweaks here and there

--- a/mobile/src/main/res/values/strings.xml
+++ b/mobile/src/main/res/values/strings.xml
@@ -18,6 +18,7 @@
     <string name="title_activity_beacons">Beacons</string>
     <string name="title_activity_bluetooth_classic">Bluetooth Classic</string>
     <string name="title_activity_bluetooth_le">Bluetooth Low Energy</string>
+    <string name="title_activity_kotlin">Kotlin</string>
     <string name="title_activity_nearby_connections">Nearby Connections</string>
     <string name="title_activity_nearby_messages">Nearby Messages</string>
     <string name="title_activity_sensors">Sensors</string>
